# libraries_hierarchy_template

./: .gitignore  LICENSE.txt  README.md
docs/: diagram.pu
execAB/: CMakeLists.txt
execAB/src/: main.cpp
libA/: CMakeLists.txt
libA/include/: libA.hpp
libA/src/: libA.cpp
libAB/: CMakeLists.txt
libAB/include/: libAB.hpp
libAB/src/: libAB.cpp
libB/: CMakeLists.txt
libB/include/: libB.hpp
libB/src/: libB.cpp
